# vortex-engine

./: CMakeLists.txt  README.md  main.cpp
src/utils/: defines.h
src/utils/logger/: base_logger.h  console_logger.cpp  console_logger.h  file_logger.cpp  file_logger.h  log_message_formater.cpp  log_message_formater.h  logger.h
src/window/: window.h
